<resources>
    <string name="app_name">flywithme_admin</string>
    <string name="splash_screen">this image splash screen</string>
    <string name="airplane">this image airplane</string>
    <string name="data_customer">Data Customer</string>
    <string name="empty_email">Email Empty</string>
    <string name="not_email">Not Email</string>
    <string name="empty_pass">Password Empty</string>
    <string name="failed_login">Login Failed</string>
    <string name="not_found">Email or Password Not Found</string>
    <string name="loading">Loading</string>
    <string name="data_flight">Data Flight</string>
    <string name="data_history_payment">History Payment</string>
    <string name="id_user">ID User :</string>
    <string name="first_name">first name :</string>
    <string name="last_name">last name : </string>
    <string name="this_image">this image</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="nik">NIK :</string>
    <string name="address">Address :</string>
    <string name="phone">Phone :</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>