<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.home.MainActivity"
    android:background="@color/blue_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_airplane"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/img_airplane"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/airplane"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dataCustomer"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="400dp"
            android:background="@drawable/btn_style"
            android:text="@string/data_customer"
            style="@style/ButtonStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dataFlight"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_style"
            style="@style/ButtonStyle"
            android:text="@string/data_flight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_dataCustomer"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_historyPayment"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_style"
            style="@style/ButtonStyle"
            android:text="@string/data_history_payment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_dataFlight"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            style="@style/ButtonStyle"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_style"
            android:text="SignOut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_historyPayment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>